[package]
name = "angelbox-api"
version = "0.1.0"
authors = ["Angelcam, Inc. <dev@angelcam.com>"]
license = "Apache-2.0"
readme  = "README.md"
edition = "2018"

[dependencies]
futures = "0.3"
libc = "0.2"

[dependencies.actix-web]
version = "4.0.0-beta.7"
default-features = false

[dependencies.clap]
version = "2"
default-features = false

[dependencies.flexi_logger]
version = "0.18"
default-features = false

[dependencies.log]
version = "0.4"
features = ["release_max_level_debug"]

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.tokio]
version = "1"
features = ["process"]

[profile.release]
debug = false
panic = "abort"
lto = true
codegen-units = 1
incremental = false
